--- a/capitulos/7-resultados.tex
+++ b/capitulos/7-resultados.tex
@@ -1,7 +1,7 @@
 \chapter{Resultados}
 \label{results}
 
-Nesse trabalho foi desenvolvido diversos experimentos para se chegar a um resultado satisfatório do algoritmo proposto. Esses resultados se dividiram principalmente em tempos de execução, neste os resultados foram divididos em tempos de execução da cifração, da cifração combinada com a \textit{thread} de envio, cifração combinada com a \textit{thread} de envio e a decifração e por fim a medição de quanto tempo médio é necessário para a resolução de um conflito. Outro experimento é uma comparação da quantidade de repetições de caracteres de um texto cifrado.
+Nesse trabalho foi desenvolvido diversos experimentos para se chegar a um resultado satisfatório do algoritmo proposto. Esses resultados se dividiram principalmente em tempos de execução, neste os resultados foram divididos em tempos de execução da cifração, da cifração combinada com a \textit{thread} de envio, cifração combinada com a \textit{thread} de envio e a decifração e por fim a medição de quanto tempo médio é necessário para a resolução de um conflito.
 
 Depois de alguns experimentos com os geradores linear congruente, \textit{Blum Blum Shub} e \textit{Blum Micali}, chegou-se a conclusão que a utilização desses geradores complicaria a análise de desempenho entre o \textit{RC4} e o algoritmo aqui proposto. Isso se deve ao fato de que esses geradores são principalmente para geração de números e para se ter números com uma repetibilidade menor seria preciso uma determinação de como usar a chave fornecida para a cifração e transforma-la em entradas satisfatórias para esses geradores. Esses geradores demandam valores muito específicos para que o algoritmo tenha resultados satisfatórios e se esses requisitos não forem satisfeitos pode-se chegar a um \textit{loop} infinito na procura de um \textit{byte} que satisfaça as condições do algoritmo de balanceamento proposto.
 
@@ -19,14 +19,46 @@ Esses experimentos foram realizados principalmente para a aproximação de um re
 
 \subsection{Experimento 1}
 
-O primeiro experimento foi utilizando somente a arquitetura que foi explanada no capítulo \ref{implementation-algorithm}, sem qualquer intervenção sobre o algoritmo. Os resultados foram totalmente insatisfatórios, como podem ser observados na tabela.
+O primeiro experimento foi realizado utilizando somente a arquitetura que foi explanada no capítulo \ref{implementation-algorithm}, sem qualquer intervenção sobre o algoritmo. Os resultados foram totalmente insatisfatórios, como podem ser observados na tabela \ref{results-experiment-1}.
+
+\begin{table}[h]
+\centering
+\begin{tabular}{|c|c|c|c|c|}
+\hline
+\multirow{2}{3cm}{Tamanho do texto(caracteres)} & \multicolumn{2}{c|}{RC4(ms)}     & \multicolumn{2}{c|}{RC4 + algoritmo(ms)} \\ \cline{2-5} 
+                                     & Cifração & Cifração + \textit{Thread} & Cifração     & Cifração + \textit{Thread}     \\ \hline
+10000                                & 12.3     & 13.4              & 18.75        & 19.75                 \\ \hline
+50000                                & 51.6     & 54.2              & 97.875       & 98.875                \\ \hline
+100000                               & 95.3     & 96.3              & 172.125      & 173.125               \\ \hline
+500000                               & 1779.2   & 1836.6            & 3737.75      & 3740.5                \\ \hline
+1000000                              & 6890.3   & 7023.6            & 9318.5       & 9325.75               \\ \hline
+5000000                              & 48861.6  & 48905.4           & 54068        & 54083.625             \\ \hline
+\end{tabular}
+\caption{Tempos obtidos no experimento 1}
+\label{results-experiment-1}
+\end{table}
 
 \subsection{Experimento 2}
 
-Depois de análise dos resultados do primeiro experimento e a comparação dos resultados do \textit{RC4} e \textit{RC4} e algoritmo proposto, percebeu-se que algo que estava sendo utilizado na arquitetura do algoritmo e que não era o algoritmo em si estava afetando o desempenho da execução. Isso se deve ao fato de que o \textit{RC4} também ter obtido resultados insatisfatórios. Depois de uma análise, descobriu-se que o tamanho da fila de mensagem que estava sendo utilizado era o problema. Devido ao seu tamanho estar limitado a poucos caracteres, a \textit{thread} de envio não estava sendo rápida suficiente e isso estava fazendo com que o tempo da cifração também fosse prejudicado. Outro indício que esse era o problema e não o algoritmo em si é que o tempo de cifração e tempo da \textit{thread} de envio é praticamente a mesma. 
+Depois de análise dos resultados do primeiro experimento e a comparação dos resultados do \textit{RC4} e \textit{RC4} em conjunto com o algoritmo proposto, percebeu-se que algo que estava sendo utilizado na arquitetura do algoritmo e que não era o algoritmo em si estava afetando o desempenho da execução. Isso se deve ao fato de que o \textit{RC4} também ter obtido resultados insatisfatórios. Depois de uma análise, descobriu-se que o tamanho da fila de mensagem que estava sendo utilizado era o problema. Devido ao seu tamanho estar limitado a poucos caracteres, a \textit{thread} de envio não estava sendo suficientemente rápida  e isso estava fazendo com que o tempo da cifração também fosse prejudicado. Outro indício que esse era o problema e não o algoritmo em si é que o tempo de cifração e tempo da \textit{thread} de envio é praticamente o mesma. 
 
-Com isso, foi efetuado o aumento da fila de mensagem e vimos que com a arquitetura implementada nesse trabalho isso é de extrema importância para o bom desempenho do algoritmo. Os resultados com a fila de mensagem expandida está na tabela:
+Com isso, foi efetuado o aumento da fila de mensagem e vimos que com a arquitetura implementada nesse trabalho isso é de extrema importância para o bom desempenho do algoritmo. Os resultados com a fila de mensagem expandida está na tabela \ref{results-experiment-2}.
 
+\begin{table}[h]
+\begin{tabular}{|c|c|c|c|c|}
+\hline
+\multirow{2}{3cm}{Tamanho do texto(caracteres)} & \multicolumn{2}{c|}{RC4(ms)}     & \multicolumn{2}{c|}{RC4 + algoritmo(ms)} \\ \cline{2-5} 
+                                     & Cifração & Cifração + Thread & Cifração     & Cifração + Thread     \\ \hline
+10000                                & 6.2      & 10.4              & 11.8         & 17.4                  \\ \hline
+50000                                & 22.6     & 34.4              & 40           & 60.6                  \\ \hline
+100000                               & 36.2     & 60                & 73           & 114.2                 \\ \hline
+500000                               & 154.4    & 279.6             & 333.6        & 548.2                 \\ \hline
+1000000                              & 304.2    & 544.2             & 663.2        & 1169.6                \\ \hline
+5000000                              & 1400.4   & 3528              & 3139         &                       \\ \hline
+\end{tabular}
+\caption{Tempos obtidos no experimento 2}
+\label{results-experiment-2}
+\end{table}
 
 \subsection{Experimento 3}
 
@@ -36,21 +68,22 @@ Com os resultados obtidos pelo experimento anterior, resolvemos reavaliar a nece
 	tcifrado = tclaro + 2 \times (tclaro/2)
 \end{equation}
 
-Isso resulta no dobro do texto em claro e que somente o algoritmo proposto envia. Portanto, para diminuir a quantidade de envios decidimos enviar os três \textit{bytes} referentes ao conflito(sinal, quantidade de \textit{bytes} descartados e texto cifrado) de uma só vez e isso chegaria perto da quantidade de envios que o \textit{RC4} realiza. O resultado desse experimento está descrito na tabela:
+Isso resulta no dobro do texto em claro e que somente o algoritmo proposto envia. Portanto, para diminuir a quantidade de envios decidimos enviar os três \textit{bytes} referentes ao conflito(sinal, quantidade de \textit{bytes} descartados e texto cifrado) de uma só vez e isso chegaria perto da quantidade de envios que o \textit{RC4} realiza. O resultado desse experimento está descrito na tabela \ref{results-experiment-3}.
 
 \begin{table}[h]
 \centering
 \begin{tabular}{|c|c|c|c|c|}
 \hline
-\multirow{2}{*}{\centering Tamanho do Texto(caracteres)} & \multicolumn{2}{c|}{RC4}         & \multicolumn{2}{c|}{RC4+Algoritmo} \\ \cline{2-5} 
-                                              & Cifração & Cifração+\textit{Thread} Envio & Cifração  & Cifração+\textit{Thread} Envio   \\ \hline
+\multirow{2}{3cm}{Tamanho do texto(caracteres)} & \multicolumn{2}{c|}{RC4(ms)}         & \multicolumn{2}{c|}{RC4+Algoritmo(ms)} \\ \cline{2-5} 
+                                              & Cifração & Cifração + \textit{Thread} & Cifração  & Cifração + \textit{Thread}   \\ \hline
 10.000                                        & 7.8      & 15.1                  & 12.6      & 15.9                   \\ \hline
 50.000                                        & 19.3     & 33.6                  & 28.2      & 34.9                   \\ \hline
 100.000                                       & 35.9     & 60.1                  & 50.5      & 61                     \\ \hline
 500.000                                       & 157      & 279.2                 & 207.2     & 427.5                  \\ \hline
 1.000.000                                     & 302.8    & 548.6                 & 397.6     & 1020.4                 \\ \hline
 \end{tabular}
-\caption{Tempos do \textit{RC4} e \textit{RC4}+Algoritmo}
+\caption{Tempos obtidos no experimento 3}
+\label{results-experiment-3}
 \end{table}
 
 \subsubsection{Tempo Total de Execução}
@@ -60,13 +93,30 @@ Como os resultados anteriores foram os mais satisfatórios que obtivemos durante
 \begin{description}
 	\item [Envio de dois \textit{bytes}] Nesse experimento, para cada \textit{byte} cifrado enviado era enviado um \textit{byte} que indicava o final do texto em claro para o lado da decifração.
 	
+	\begin{table}[h]
+\begin{tabular}{|c|c|c|c|c|}
+\hline
+\multirow{2}{3cm}{Tamanho do texto(caracteres)} & \multicolumn{2}{c|}{RC4(ms)}     & \multicolumn{2}{c|}{RC4 + algoritmo(ms)} \\ \cline{2-5} 
+                                     & Cifração(ms) & Cifração + \textit{Thread} & Cifração     & Cifração + \textit{Thread}    \\ \hline
+10000                                & 8.2      & 11.6              & 10.4         & 17.6                  \\ \hline
+50000                                & 21.2     & 33.4              & 27           & 61.8                  \\ \hline
+100000                               & 36.2     & 61.8              & 47.4         & 426.8                 \\ \hline
+500000                               & 159.6    & 281.2             & 212.4        & 426.8                 \\ \hline
+1000000                              & 311.2    & 574.4             & 419          & 835                   \\ \hline
+5000000                              & 1540.8   & 2794.2            & 2086         & 4501.4                \\ \hline
+\end{tabular}
+\caption{Experimento tempo total enviando 2 \textit{bytes}}
+\end{table}
+
+Essa opção de envio foi descartado, visto que o tempo que a \textit{thread} utiliza para enviar aumentou consideravelmente. Portanto, decidimos pela estratégia que mostraremos a seguir.
+	
 	\item[Envio de sequência de caracteres] Nesse experimento, ao final do texto em claro foi enviado uma sequência de três 0.
 	
 \begin{table}[h]
 \centering
-\begin{tabular}{|c|c|c|c|}
+\begin{tabular}{|p{3cm}|c|c|c|}
 \hline
-Tamanho do Texto(caracteres) & RC4(ms)  & RC4+Algoritmo(ms) & Tempo a mais(ms) \\ \hline
+Tamanho do texto(caracteres) & RC4(ms)  & RC4+Algoritmo(ms) & Tempo a mais(ms) \\ \hline
 10.000                       & 125.2    & 127.6             & 2.4              \\ \hline
 50.000                       & 605.9    & 623               & 17.1             \\ \hline
 100.000                      & 1144.8   & 1214.6            & 69.8             \\ \hline
@@ -77,7 +127,7 @@ Tamanho do Texto(caracteres) & RC4(ms)  & RC4+Algoritmo(ms) & Tempo a mais(ms) \
 \end{table}
 \end{description}
 
-Com esses resultados obtivemos em média 4,1\% de tempo a mais. A maior porcentagem obtida foi com o texto de tamanho 100.000 caracteres, 5,7\%.
+Com esses resultados obtivemos em média 4,34\% de tempo a mais. A maior porcentagem obtida foi com o texto de tamanho 100.000 caracteres, 6,09\%.
 
 \subsection{Resolução de Conflitos}
 
@@ -95,12 +145,7 @@ Tamanho do texto(caracteres) & Tempo Extra(ms) & Quantidade de Conflitos & Tempo
 \centering 1.000.000                    & 611.8           & 499.890                  \centering & 0.001224                     \\ \hline
 \centering 5.000.000                    & 3029.1          & 2.497.605                 & {0.001213}                     \\ \hline
 \end{tabular}
-\caption{Quantidade de conflitos identificados utilizando o algoritmo de balanceamento e o tempo médio de resolução.}
+\caption{Quantidade de conflitos e tempo médio de resolução.}
 \end{table}
 
 Percebe-se que a média de conflitos para cada tamanho de texto é aproximadamente a metade do tamanho do texto em claro. Outra percepção que pode ser obtida pela tabela é que conforme a quantidade de conflitos aumenta, o tempo médio de resolução diminui.
-
-
-\section{Quantidade de Repetições}
-
-Uma justificativa para a utilização desse algoritmo é pelo fato de a repetição ser diminuída por causa do algoritmo balanceador. Nessa seção demonstraremos para o texto de tamanho 1.000.000 caracteres os 10 caracteres que mais se repetiram ao longo da cifração tanto para o \textit{RC4} como para o algoritmo proposto.
