--- a/fixos/listasAutomaticas.tex
+++ b/fixos/listasAutomaticas.tex
@@ -3,8 +3,8 @@
 \cleardoublepage
 \pdfbookmark[0]{\listtablename}{lot}
 \listoftables*
-\cleardoublepage
-\renewcommand{\lstlistlistingname}{Lista de códigos}
+%\cleardoublepage
+%\renewcommand{\lstlistlistingname}{Lista de códigos}
 \renewcommand\lstlistingname{Código}
-\lstlistoflistings
+%\lstlistoflistings
 \cleardoublepage
