--- a/editaveis/apendices.tex
+++ b/editaveis/apendices.tex
@@ -1,1 +1,14 @@
+\begin{apendicesenv}
+
+\partapendices
+
+\chapter{Códigos}
+
+\input{editaveis/codigos}
+
+%\chapter{Segundo Apêndice}
+
+%Texto do segundo apêndice.
+
+\end{apendicesenv}
 
