Making appendix better

--- a/editaveis/codigos.tex
+++ b/editaveis/codigos.tex
@@ -1,7 +1,19 @@
-\lstinputlisting{ ../algoritmo/cipher.c }
-\lstinputlisting{ ../algoritmo/decipher.c }
-\lstinputlisting{ ../algoritmo/functions.c }
-\lstinputlisting{ ../algoritmo/rc4Decipher.c }
+\section{Bibliotecas}
+\subsection{Conexão}
+\lstinputlisting{ ../algoritmo/connections.h }
+\subsection{Funções}
 \lstinputlisting{ ../algoritmo/functions.h }
-\lstinputlisting{ ../algoritmo/test.c }
+\section{Conexão e Funções}
+\subsection{Conexão}
+\lstinputlisting{ ../algoritmo/connections.c }
+\subsection{Funções}
+\lstinputlisting{ ../algoritmo/functions.c }
+\section{Programas Principais}
+\subsection{Cifrador Algoritmo Proposto}
+\lstinputlisting{ ../algoritmo/cipher.c }
+\subsection{Decifrador Algoritmo Proposto}
+\lstinputlisting{ ../algoritmo/decipher.c }
+\subsection{Cifrador \textit{RC4}}
 \lstinputlisting{ ../algoritmo/rc4Cipher.c }
+\subsection{Decifrador \textit{RC4}}
+\lstinputlisting{ ../algoritmo/rc4Decipher.c }
